init: start CV3 task

--- a/index.html
+++ b/index.html
@@ -4,11 +4,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 
 <body>
-  <p>Test text</p>
+  <header>
+    <nav>
+      <ul class="navigation">
+        <li>About me</li>
+        <li>Education</li>
+        <li>Language</li>
+        <li>Work experience</li>
+        <li>Contact me</li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <div>
+      <h1>About me</h1>
+    </div>
+    <div>
+      <h1>Education</h1>
+    </div>
+    <div>
+      <h1>Language</h1>
+    </div>
+    <div>
+      <h1>Work experience</h1>
+    </div>
+  </main>
+  <footer>
+    <ul class="footer-contact">
+      <li>©2024</li>
+      <li><img class="logo-rsschool" src="assest/img/logo_rs_school.png" alt="rs-school-logo"></li>
+    </ul>
+  </footer>
 </body>
 
 </html>
