feat: add photo, info about me, link to the Github

--- a/index.html
+++ b/index.html
@@ -20,24 +20,97 @@
       </ul>
     </nav>
   </header>
+  <article>
+    <h1>Viktar Kevarkou</h1>
+    <img src="assest/img/avatar.jpg" alt="My photo">
+  </article>
   <main>
     <div>
-      <h1>About me</h1>
+      <h2>About me</h2>
+      <p>Experienced manager with a background in sales. My strongest sides are dealing with customers and documents.
+        I'm responsible, purposeful and self-motivated. It helps me do my work in the best way. Study HTML5, CSS3, JS.
+        I'm open for new experience and I'm ready to get new knowledge.</p>
     </div>
     <div>
-      <h1>Education</h1>
+      <h2>Education</h2>
+      <ul>
+        <li>2015 - 2020</li>
+        <ul>
+          <li>Lawyer, BIP - University of law and social-information technologies, Minsk</li>
+        </ul>
+        <li>2020</li>
+        <ul>
+          <li>Software Tester , IT Academy Stormnet</li>
+        </ul>
+        <li>2023</li>
+        <ul>
+          <li>Hexlet JS Essential for 2 weeks</li>
+        </ul>
+        <li>2024</li>
+        <ul>
+          <li>RS School JS/FE Pre-School 2024Q2</li>
+        </ul>
+      </ul>
     </div>
     <div>
-      <h1>Language</h1>
+      <h2>Example of code</h2>
+      <ul>
+        <li>Some rules:</li>
+        <ul>
+          <li>You need to get 3 right answers in a row;</li>
+          <li>In case you are wrong, you will receive next message 'You lose!';</li>
+          <li>In case you get 3 right answer in a row, you will receive next message 'You win!';</li>
+          <li><a href="https://github.com/Viktor0178/HexletCoding.git">Link to the game</a></li>
+        </ul>
+      </ul>
     </div>
     <div>
-      <h1>Work experience</h1>
+      <h2>Language</h2>
+      <ul>
+        <li>English - B1+ (Intermediate);</li>
+        <li>Russian - Native;</li>
+      </ul>
+    </div>
+    <div>
+      <h2>Work experience</h2>
+      <ul>
+        <li>2015 - 2021</li>
+        <p>Sales Manager, Mogirus, Minsk</p>
+        <p>Main tasks:</p>
+        <ul>
+          <li>Dealing with customers and suppliers</li>
+          <li>Work in 1C (8.3)</li>
+          <li>Work with documents (transport log, Foreign Economic Activity)</li>
+        </ul>
+        <li>2021 - present</li>
+        <p>Business Application Support Specialist, EPAM, Minsk/Vilnius</p>
+        <p>Main tasks:</p>
+        <ul>
+          <li>Billing Reconciliation tool configuration and support</li>
+          <li>Digitize and map data to PDF enrollment forms</li>
+          <li>Create XML files for Billing Reconciliation</li>
+          <li>Manage the initial setup process for new customers</li>
+          <li>Configure all types of import connections</li>
+          <li>Perform testing</li>
+          <li>Troubleshooting</li>
+          <li>Analyze error logs and resolve problems</li>
+        </ul>
+      </ul>
+    </div>
+    <div>
+      <h2>Contact Me</h2>
+      <ul>
+        <li>Discord: Viktar(@viktor0178)</li>
+        <li>Gmail: vitek.kevorkov@gmail.com</li>
+      </ul>
     </div>
   </main>
   <footer>
     <ul class="footer-contact">
       <li>©2024</li>
-      <li><img class="logo-rsschool" src="assest/img/logo_rs_school.png" alt="rs-school-logo"></li>
+      <li><a href="https://github.com/Viktor0178" target="_blank">My Github</a></li>
+      <li><a href="https://rs.school/courses/javascript-ru" target="_blank"><img class="logo-rsschool"
+            src="assest/img/logo_rs_school.png" alt="rs-school-logo"></a></li>
     </ul>
   </footer>
 </body>
